--- a/theme/compiegne.css
+++ b/theme/compiegne.css
@@ -1,6 +1,6 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic);
+@import url(http://fonts.googleapis.com/css?family=Exo:400,600,800);
 /**
- * Default theme for reveal.js.
+ * Beige theme for reveal.js.
  * 
  * Copyright (C) 2011-2012 Hakim El Hattab, http://hakim.se
  */
@@ -16,27 +16,31 @@
  * GLOBAL STYLES
  *********************************************/
 body {
-  background: #1c1e20;
-  background: -moz-radial-gradient(center, circle cover, #555a5f 0%, #1c1e20 100%);
-  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, #555a5f), color-stop(100%, #1c1e20));
-  background: -webkit-radial-gradient(center, circle cover, #555a5f 0%, #1c1e20 100%);
-  background: -o-radial-gradient(center, circle cover, #555a5f 0%, #1c1e20 100%);
-  background: -ms-radial-gradient(center, circle cover, #555a5f 0%, #1c1e20 100%);
-  background: radial-gradient(center, circle cover, #555a5f 0%, #1c1e20 100%);
-  background-color: #2b2b2b;
+
+  
+  background: -moz-radial-gradient(top, circle cover, #FFCCCC 0%, #FF5544 100%);
+  background: -webkit-gradient(radial, top center, 0px, center center, 100%, color-stop(0%, #FFCCCC), color-stop(100%, #FF5544));
+  background: -webkit-radial-gradient(top, circle cover, #FFCCCC 0%, #FF5544 100%);
+  background: -o-radial-gradient(top, circle cover, #FFCCCC 0%, #FF5544 100%);
+  background: -ms-radial-gradient(top, circle cover, #FFCCCC 0%, #FF5544 100%);
+  background: radial-gradient(top, circle cover, #FFCCCC 0%, #FF5544 100%);
+  background-color: #FFDDCC;
+  background-image: url(../../img/background.png);
+  background-repeat: repeat;
+  background-position: center;
+
 }
 
 .reveal {
   font-family: "Lato", Times, "Times New Roman", serif;
-  font-size: 36px;
-  font-weight: 200;
-  letter-spacing: -0.02em;
-  color: #eeeeee;
+  font-size: 34px;
+  font-weight: 400;
+  color: #333333;
 }
 
 ::selection {
   color: white;
-  background: #ff5e99;
+  background: rgba(79, 64, 28, 0.99);
   text-shadow: none;
 }
 
@@ -50,23 +54,39 @@ body {
 .reveal h5,
 .reveal h6 {
   margin: 0 0 20px 0;
-  color: #eeeeee;
-  font-family: "League Gothic", Impact, sans-serif;
+  color: #222222;
+  font-weight: 800;
+  font-family: "Exo", Impact, sans-serif;
   line-height: 0.9em;
   letter-spacing: 0.02em;
   text-transform: uppercase;
-  text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2);
+  text-shadow: none;
 }
 
 .reveal h1 {
-  text-shadow: 0 1px 0 #cccccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbbbbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaaaaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 20px 20px rgba(0, 0, 0, 0.15);
+  color: #AA0000;
+  text-shadow: 0 1px 0 #333333, 0 2px 0 #333333, 0 3px 0 #333333, 0 4px 0 #333333, 0 5px 0 #333333, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 20px 20px rgba(0, 0, 0, 0.15);
+  font-size: 3.5em;
+}
+
+.reveal h2 {
+  font-size: 60px;
+}
+
+.reveal h3 {
+  font-size: 50px;
+}
+
+.reveal h4{
+  color: #883333;
 }
 
 /*********************************************
  * LINKS
  *********************************************/
 .reveal a:not(.image) {
-  color: #13daec;
+  color: #AA0000;
+  font-weight: 700;
   text-decoration: none;
   -webkit-transition: color .15s ease;
   -moz-transition: color .15s ease;
@@ -76,14 +96,14 @@ body {
 }
 
 .reveal a:not(.image):hover {
-  color: #71e9f4;
+  color: #AA0000;
   text-shadow: none;
   border: none;
 }
 
 .reveal .roll span:after {
   color: #fff;
-  background: #0d99a5;
+  background: #AA0000;
 }
 
 /*********************************************
@@ -92,7 +112,7 @@ body {
 .reveal section img {
   margin: 15px;
   background: rgba(255, 255, 255, 0.12);
-  border: 4px solid #eeeeee;
+  border: 4px solid #333333;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
   -webkit-transition: all .2s linear;
   -moz-transition: all .2s linear;
@@ -103,47 +123,47 @@ body {
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
-  border-color: #13daec;
+  border-color: #8b0000;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.55);
 }
 
 /*********************************************
  * NAVIGATION CONTROLS
  *********************************************/
-.reveal .controls div.left,
-.reveal .controls div.left.enabled {
-  border-right-color: #13daec;
+.reveal .controls div.navigate-left,
+.reveal .controls div.navigate-left.enabled {
+  border-right-color: #000000;
 }
 
-.reveal .controls div.right,
-.reveal .controls div.right.enabled {
-  border-left-color: #13daec;
+.reveal .controls div.navigate-right,
+.reveal .controls div.navigate-right.enabled {
+  border-left-color: #000000;
 }
 
-.reveal .controls div.up,
-.reveal .controls div.up.enabled {
-  border-bottom-color: #13daec;
+.reveal .controls div.navigate-up,
+.reveal .controls div.navigate-up.enabled {
+  border-bottom-color: #000000;
 }
 
-.reveal .controls div.down,
-.reveal .controls div.down.enabled {
-  border-top-color: #13daec;
+.reveal .controls div.navigate-down,
+.reveal .controls div.navigate-down.enabled {
+  border-top-color: #000000;
 }
 
-.reveal .controls div.left.enabled:hover {
-  border-right-color: #71e9f4;
+.reveal .controls div.navigate-left.enabled:hover {
+  border-right-color: #c00000;
 }
 
-.reveal .controls div.right.enabled:hover {
-  border-left-color: #71e9f4;
+.reveal .controls div.navigate-right.enabled:hover {
+  border-left-color: #c00000;
 }
 
-.reveal .controls div.up.enabled:hover {
-  border-bottom-color: #71e9f4;
+.reveal .controls div.navigate-up.enabled:hover {
+  border-bottom-color: #c00000;
 }
 
-.reveal .controls div.down.enabled:hover {
-  border-top-color: #71e9f4;
+.reveal .controls div.navigate-down.enabled:hover {
+  border-top-color: #c00000;
 }
 
 /*********************************************
@@ -154,7 +174,7 @@ body {
 }
 
 .reveal .progress span {
-  background: #13daec;
+  background: #8b0000;
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -ms-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
