--- a/theme/compiegne.css
+++ b/theme/compiegne.css
@@ -1,16 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Exo:400,600,800);
-/**
- * Beige theme for reveal.js.
- * 
- * Copyright (C) 2011-2012 Hakim El Hattab, http://hakim.se
- */
-@font-face {
-  font-family: 'League Gothic';
-  src: url("../../lib/font/league_gothic-webfont.eot");
-  src: url("../../lib/font/league_gothic-webfont.eot?#iefix") format("embedded-opentype"), url("../../lib/font/league_gothic-webfont.woff") format("woff"), url("../../lib/font/league_gothic-webfont.ttf") format("truetype"), url("../../lib/font/league_gothic-webfont.svg#LeagueGothicRegular") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic);
 
 /*********************************************
  * GLOBAL STYLES
@@ -25,7 +14,7 @@ body {
   background: -ms-radial-gradient(top, circle cover, #FFCCCC 0%, #FF5544 100%);
   background: radial-gradient(top, circle cover, #FFCCCC 0%, #FF5544 100%);
   background-color: #FFDDCC;
-  background-image: url(../../img/background.png);
+  background-image: url(../img/background.png);
   background-repeat: repeat;
   background-position: center;
 
